2012-11-28  Karl Berry  <karl@gnu.org>

	* install-info/tests/defs.in (path_spec, EGREP): need these
	for findprog.

2012-11-26  Karl Berry  <karl@gnu.org>

	* pretest 4.13.91.

	* configure.ac: invoke gl_REGEX, after
	gnulib-tool --add-import regex.  This will now be used on
	all systems except recent-enough libc.

	* doc/texinfo.txi (Command Syntax): Explicitly mention
	whitespace after @-command names being (usually) ignored.

	* doc/texinfo.txi (Not Ending a Sentence): Attempt
	to document the sentence-ending heuristic more clearly.
	Suggestion from Eli Zaretskii in <http://bugs.gnu.org/12973#14>,
	draft from Paul Eggert in bug-texinfo 24 Nov 2012 18:02:27.

	* install-info/defs.in (findprog): new fn, from texi2dvi.
	* install-info/tests/ii-0050-test,
	* install-info/tests/ii-0041-test: use it to check for zdiff
	(not available on bare Solaris) and skip tests if needed.

2012-11-25  Karl Berry  <karl@gnu.org>

	* doc/texinfo.txi: consistently use "uppercase" and "lowercase",
	rather than with spaces or dashes.
	
	* system.h (const): do not #undef around gettext.h.
	Suggested by Eli.  We'll see.

2012-11-16  Eli Zaretskii  <eliz@gnu.org>
	
	* info/pcterm.c (gettextinfo): exit rather than xexit.
	(tputs, tgoto, tgetent): use const.
	* info/session.c [!FIONREAD]: require F_GETFL and F_SETFL as well
	as O_NDELAY for this branch.
	* info/terminal.c (tputs) [! HAVE_TERMCAP_H]: declare puts as
	returning int.

2012-11-23  Karl Berry  <karl@gnu.org>

	* doc/texinfo.txi (makeinfo Pointer Creation): be more
	explicit about what to do.  Suggestion from Richard Jackson,
	help-texinfo 18 Feb 2003 23:54:07.

2012-11-22  Patrice Dumas  <pertusus@free.fr>

	* */*.pl */Makefile.am: use #! /usr/bin/env perl for shebangs in case
	perl is not in /usr/bin.
	Subbstitute $(PERL) in the shebang for scripts that are modified
	using configure generated values.
	* man/Makefile.am: remove $(srcdir) from targets.

2012-11-20  Patrice Dumas  <pertusus@free.fr>
